anypoint-studio/v/6.0/setting-up-your-development-environment.adoc
= Development Environment Setup

Setting up a proper environment from the beginning is crucial for success with using Mule. The following document outlines the steps to be taken before any significant use of AnyPoint Studio, Mule, and our Cloud Solutions.

== Anypoint Studio Setup

=== Check Hardware and Software Requirements

* Click link:/mule-user-guide/v/3.8/hardware-and-software-requirements[here] to find information regarding the Hardware and Software requirements. Please correctly align with the appropriate Hardware and Software before proceeding.

=== Install Oracle JDK

* If operating Mule 3.7 or newer, download and install the newest version of Oracle JDK link:http://www.oracle.com/technetwork/java/javase/downloads/index.html[here].
For Mule 3.6 and below, please note Java 7 is compatible.

=== Download and Install Anypoint Studio

* See link:/anypoint-studio/v/6.0/download-and-launch-anypoint-studio[Download Anypoint Studio] for detailed instructions

* If you have any extensions you wish to add to Studio, such as premium connectors or the enterprise security package, see link:/anypoint-studio/v/6.0/installing-extensions[Installing Extensions]

=== Adding Mule Runtimes

* Anypoint Studio always comes bundled with the latest enterprise version of the Mule Runtime. If you wish to install any prior or beta version of the Runtime to develop applications with it in Studio, see link:/anypoint-studio/v/6.0/studio-update-sites[Studio Update Sites].

* If you wish to develop applications with the free Community version of the Mule Runtime, see link:/anypoint-studio/v/6.0/adding-community-runtime[Installing Community Edition of Mule Runtime]

=== Setup and Learn about Maven

Maven is a powerful build automation tool used for software project management. We highly urge our customers to use Maven, Gradle, or a similar in-house tool with any significant usage of MuleSoft software.

* Learn more about Maven http://maven.apache.org/guides/getting-started/[here].

* Start learning how to use Maven with Mule link:/anypoint-studio/v/6.0/using-maven-in-anypoint-studio[here].

=== Setup Code Repository

Code Repositories facilitate the tracking and versioning of changes developers make to a software project; this enables several people to work on the same project simultaneously without creating conflicts among the changes and additions they make.

* Learn more about two recommended Code Repositories: link:http://subversion.apache.org/[Subversion] and link:http://git-scm.com/[Git].

* Start learning how to use Subversion with Studio link:/mule-user-guide/v/3.8/using-subversion-with-studio[here].

=== Setup a Maven Repository Manager

A repository manager is a dedicated server application designed to manage repositories (internal and third party) of binary components. The usage of a repository manager is a best practice for any significant usage of Maven.

* Learn more about two recommended tools here: link:http://www.sonatype.org/nexus/downloads/[Nexus] and link:http://www.jfrog.com/open-source/[Artifactory].

=== Obtain credentials to access paid components and controls

Please Note this only has to be done once. The project manager or who ever is responsible for project oversight should complete this step.

* Login to the Support portal link:https://support.mulesoft.com[here]. If you do not have credentials to login, please contact your Customer Success Manager.

* Click the "Case" tab located on the top of the Support Portal Home page.

* Click the "Create New Case" button, at the right of the page header.

* Fill out the required information (highlighted in red) and in the "Description" field please include a request for your credentials.

=== Configure MuleSoft Repositories

* Open Nexus. If you do not have Nexus learn more about Nexus link:http://www.sonatype.org/nexus/downloads/[here]. If you are using a different Repository Manager tool, please contact your Customer Success Manager.

* Log in as administrator, open the Repositories tab, select *Add…->Proxy Repository*.

* Create a new proxy repository with the following configuration:

** Repository ID: muleee

** Repository Name: MuleSoft EE Repository

** Set up Remote Storage Location. Click link:https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/[here].

** Check the Authentication checkbox

** Fill in User Name (User Name obtained from Support) and password.

== Deploying to Production Environments

Anypoint Studio comes bundled with built in runtime for deploying and testing your applications. This server however is not meant for production, as uptime restrictions apply. To deploy an application to production you can either use:

* The link:/runtime-manager/[Runtime Manager], to deploy to a cloud or a local server/server-group/cluster
* A link:/mule-user-guide/v/3.8/downloading-and-starting-mule-esb[standalone local Mule server]
* The link:/mule-management-console/v/3.8/[Mule Management Console] to manage local servers (which will be deprecated in the future)


== Frequently Asked Questions

=== Does Studio Require any license keys?

No. Studio does not require any customer specific license keys. Just download Studio link:https://www.mulesoft.com/platform/studio[here] and start learning how to use it link:/mule-fundamentals/v/3.8/anypoint-studio-essentials[here].

=== How many additional users can I add to an account?

Each account is different. Depending on the Customer's Use Case and their needs we provide access to varying numbers of users. Please contact your Customer Success Manager for inquires with regards to the number of users you can add to your account.

=== How do I access the Support Portal?

Login to the Support portal link:https://support.mulesoft.com[here]. If you do not have credentials to login, please contact your Customer Success Manager.

=== How do I file a support ticket within the Support Portal?

. Login to the Support portal link:https://support.mulesoft.com[here]. If you do not have credentials to login, please contact your Customer Success Manager.
. Click the "Case" tab located on the top of the Support Portal Home page.
. Click the "Create New Case" button, at the right of the page header.
. Fill out the required information (marked by an asterisk(*)). Our support team will respond soon.

=== Do you need to configure servers with Anypoint Studio?

No, Anypoint Studio runs as an independent application on your machine and it does not need to be configured with any servers.

=== Where do I find my license key?

1. Login to the Support portal link:https://support.mulesoft.com[here]. If you do not have credentials to login, please contact your Customer Success Manager.

2. Click the "Subscriptions" tab located on the top of the Support Portal Home page.

3. Click on the "Subscription Name" of the Subscription you would like a license key for. Please note that you must click on the "Subscription Name" (second column on the right) or you will not be forwarded to the correct page.

4. Click on the "License ID" number found on the bottom left of the page.

5. Click on the "View" button to download your license key.

=== What happens when my license key expires?

MuleSoft operates an annual subscription model. Every year in order to continue to utilize MuleSoft, you will need to renew your account. Your Customer Success Manager will reach out with regards to renewal during their regular cadence with you. However, if you are ever interested in discussing renewal beforehand, please do not hesitate to reach out to your Customer Success Manager.

== See Also

* link:/mule-fundamentals/v/3.8/anypoint-platform-primer[Anypoint Platform Primer]
* link:/mule-fundamentals/v/3.8/begin-with-the-basics[Begin with the Basics]
* link:/mule-fundamentals/v/3.8/build-a-hello-world-application[Build a Hello World Application]
